--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Better Firefly",
     "author": "Finley Cooper",
-    "version": "1.2.8",
+    "version": "1.3.0",
     "manifest_version": 2,
     "content_scripts": [
         {
@@ -47,8 +47,13 @@
     },
     "permissions": [
         "https://gordano.fireflycloud.net/*",
-        "storage"
+        "https://discord.com/api/v8/users/@me",
+        "storage",
+        "identity"
     ],
+    "background": {
+        "scripts": ["background.js"]
+    },
     "description": "Auto-login, dark mode and other helpful features for the Gordano Firefly Website.",
 
     "icons": {
